--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
         
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
-        <script src="/SCRIPTS/script0.js"></script>
+        <script src="SCRIPTS/script0.js"></script>
     </body>
 </html>
