--- a/PAGES/page1.html
+++ b/PAGES/page1.html
@@ -35,7 +35,7 @@
   </style>
 </head>
 <body>
-  <div id="redirectMessage"> qué casancio ¿no?, sólo pica un poco más .</div>
+  <div id="redirectMessage">qué casancio ¿no?, sólo pica un poco más</div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
