--- a/PAGES/page4.html
+++ b/PAGES/page4.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>scroll</title>
+        <title>mujeresqueminan</title>
         <link rel="icon" href="../favicon.png" type="image/x-icon">
         <link rel="stylesheet" href="../STYLES/style4.css">
     </head>
     <body>
         <div class="header">
-            <p>desliza hacia abajo</p>
+            <p>hacia abajo</p>
         </div>
         <div class="container">
             <!-- Existing rows -->
@@ -165,7 +165,7 @@
             <div class="whitespace"></div>
         </div>
         <div class="outro">
-            <button id="moreButton" onclick="window.location.href='page5.html';">Más</button>
+            <button id="moreButton" onclick="window.location.href='page5.html';">más</button>
         </div>
         
 
