--- a/PAGES/page3.html
+++ b/PAGES/page3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../STYLES/style3.css">
-    <title></title>
+    <title>mujeresqueminan</title>
     <link rel="icon" href="../favicon.png" type="image/x-icon">
 </head>
 <body>
