--- a/PAGES/page5.html
+++ b/PAGES/page5.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>mujeresqueminan</title>
   <link rel="icon" href="../favicon.png" type="image/x-icon">
   <style>
      @font-face {
@@ -19,7 +19,7 @@
 
     #completionScreen {
     font-family: 'Clash Display', sans-serif;
-      font-size: 100px;
+      font-size: 60px;
       color: #000;
       border-radius: 10px;
       padding: 20px;
@@ -45,7 +45,7 @@
         background-color: transparent; /* No fill color */
         color: #000; /* White text */
         border-radius: 50%; /* Circular border */
-        padding: 100px; /* Adjust the padding to maintain circular shape */
+        padding: 40px; /* Adjust the padding to maintain circular shape */
         cursor: pointer; /* Pointer cursor on hover */
         transition: background-color 0.3s ease, color 0.3s ease; /* Optional: smooth transition for hover effect */
     }
@@ -59,8 +59,8 @@
 </head>
 <body>
     <div id="completionScreen">
-        <h1>muchas gracias <3 mujer minera siempre</h1>
-        <button id="exitButton">volver a empezar</button>
+        <h1>gracias</h1>
+        <button id="exitButton">volver</button>
     </div>
   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
